fix styling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,18 @@
   padding: 0;
 }
 
+body,
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   font-family: 'DM Sans', sans-serif;
   color: #B2B4E8;
   background: #000;
   background-image: url(../img/stars.jpg);
+  overflow: hidden;
 }
 
 .container {
@@ -27,15 +34,15 @@ body {
 
 .horizon {
   background: linear-gradient(rgba(4, 4, 12, 0) 0%, rgb(21, 18, 75, 100) 100%);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 1;
 }
 
 .wrapper {
   display: flex;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   align-items: center;
   justify-content: center;
@@ -65,6 +72,8 @@ body {
 
 .headline {
   width: 100%;
+  line-height: 1;
+  margin-bottom: 1em;
 }
 
 .anim2 {
